@@ -147,6 +147,8 @@ IDLE
 Tests
 -----
 
+- Issue #17712: Fix test_gdb failures on Ubuntu 13.04.
+
 - Issue #17835: Fix test_io when the default OS pipe buffer size is larger
   than one million bytes.
 
